# kiln

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
defaults/: SYSTEM_PROMPT.md
defaults/skills/autonomy/: SKILL.md
defaults/skills/collaboration/: SKILL.md
defaults/skills/programming/: SKILL.md
defaults/skills/research/: SKILL.md
defaults/skills/skill-authoring/: SKILL.md
defaults/skills/task-management/: SKILL.md
defaults/skills/tool-authoring/: SKILL.md
defaults/tools/: fetch  kb  log-analysis  read-sessions  reddit  research  session-query  task  tokens  twitter-search  yt
defaults/tools/core/: gateway  lockdown  recall  schedule  security-check  seek  sessions  todo
defaults/tools/lib/: budget.py  (+4 more)
examples/: aleph-agent.yml  full-agent.yml  minimal-agent.yml
scripts/: build_docs_index.py
services/gateway/: __init__.py  __main__.py  bridges.py  config.py  daemon.py  messages.py  subscriptions.py
services/voice/: discord.py  openai.py
src/kiln/: __init__.py  cli.py  config.py  edit_normalize.py  guardrails.py  harness.py  hooks.py  names.py  permissions.py  prompt.py  registry.py  session_config.py  shell.py  state.py  tools.py  transcript.py  types.py
tests/: test_cli.py  test_config.py  test_custom_backend.py  test_daemon.py  test_edit_normalize.py  test_guardrails.py  test_prompt.py  test_scheduler.py  test_scheduler_integration.py  test_security.py  test_steering.py  test_stream_stall.py  test_stream_stall_integration.py  test_transcript.py  test_tui_markdown.py  test_tui_sanitize.py
tools/: gateway  sessions  tool-info
(+63 files in other folders)
