[project]
name = "kiln"
version = "0.1.0"
description = "Agent runtime for Claude Code — identity-neutral, extensible"
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk>=0.1.41",
    "pyyaml>=6.0",
    "prompt-toolkit>=3.0.52",
]

[project.scripts]
kiln = "kiln.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.hatch.build.targets.wheel]
packages = ["src/kiln"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
